--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 #line {
+	position: absolute;
 	width: 200px;
     height: 2px;
-    background-color: black;
+    background-color:rgb(0, 0, 0);
 	animation : rotate 5s linear infinite;
 }
 .container {
