--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,7 @@
-#line {
-	position: absolute;
-	width: 200px;
-    height: 2px;
-    background-color:rgb(0, 0, 0);
-	animation : rotate 5s linear infinite;
-}
-.container {
-	width: 500px;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #e7e7e7;
-}
-@keyframes rotate {
+
+@keyframes rotateAnimation {
     from {
-        transform: rotate(1deg);
+        transform: rotate(0deg);
     }
     to {
         transform: rotate(360deg);
